--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ greeting.suffix=!!, How are you???
 
 greeting.percentage=25%
 invoice.vatRate=2.5
+inv.vatRate=2.5
+inv.allowsDiscount=false
+inv.discountRate=10
+inv.terms=text
+inv.penalties=text
 
 quarkus.log.console.enable=true
 quarkus.log.console.level=DEBUG
@@ -24,3 +29,17 @@ quarkus.log.file.format=%d %-5p [%c{2.}] (%t) %s%e%n
 
 quarkus.log.console.json=true
 uarkus.log.console.json.pretty-print=true
+
+# DATABASE - Default
+quarkus.datasource.db-kind=h2
+quarkus.datasource.username=sa
+quarkus.datasource.password=sa
+quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkusdb
+quarkus.datasource.jdbc.max-size=16
+quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.datasource.users.db-kind=h2
+quarkus.datasource.users.username=user1
+#quarkus.datasource.password=user1
+quarkus.datasource.users.url=jdbc:h2:mem:quarkususerdb
+quarkus.datasource.users.max-size=16
